[gd_scene load_steps=2 format=3 uid="uid://boec0e7ocyg1x"]

[ext_resource type="Script" path="res://components/hitbox_component.gd" id="1_hajs4"]

[node name="HitboxComponent" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_hajs4")

[node name="Hitbox" type="CollisionShape2D" parent="."]
debug_color = Color(0.992157, 0, 0.254902, 0.203922)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
